syntax = "proto3";
option csharp_namespace = "TapToTweetReserved.Shared";

// import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";
// import "google/protobuf/wrappers.proto";

package reservedtweets;

service ReservedTweets {
  rpc AddTweet (ReservedTweet) returns (Uuid);
}

message Uuid {
  string value = 1;
}

message ReservedTweet{
    Uuid id = 1;
    string textToTweet = 2;
    int32 order = 3;
    bool isTweeted = 4;
}